--- a/core/src/main/resources/templates/core/management_eco_news.html
+++ b/core/src/main/resources/templates/core/management_eco_news.html
@@ -234,22 +234,22 @@
                         <input type="hidden" class="form-control" name="id" value="-1" readonly required>
                         <div class="form-group">
                             <label>Title</label>
-                            <input type="text" class="form-control" name="title" required>
+                            <textarea type="text" class="form-control" name="title" required></textarea>
                             <span th:id="errorModalSavetitle" class="errorSpan"></span>
                         </div>
                         <div class="form-group">
                             <label>Text</label>
-                            <input type="text" class="form-control" name="text" required>
+                            <textarea type="text" class="form-control" name="text" required></textarea>
                             <span th:id="errorModalSavetext" class="errorSpan"></span>
                         </div>
                         <div class="form-group">
                             <label>Tags</label>
-                            <input type="text" class="form-control" name="tags" required>
+                            <textarea type="text" class="form-control" name="tags" required></textarea>
                             <span th:id="errorModalSavetags" class="errorSpan"></span>
                         </div>
                         <div class="form-group">
                             <label>Source</label>
-                            <input type="text" class="form-control" name="source">
+                            <textarea type="text" class="form-control" name="source"></textarea>
                         </div>
                         <div class="form-group">
                             <label>Image</label>
@@ -283,26 +283,26 @@
                         </div>
                         <div class="form-group">
                             <label for="title">Title</label>
-                            <input type="text" class="form-control" id="title" name="title" required>
+                            <textarea type="text" class="form-control" id="title" name="title" required></textarea>
                             <span th:id="errorModalUpdatetitle" class="errorSpan"></span>
                         </div>
                         <div class="form-group">
                             <label for="text">Text</label>
-                            <input type="text" class="form-control" id="text" name="text" required>
+                            <textarea type="text" class="form-control" id="text" name="text" required></textarea>
                             <span th:id="errorModalUpdatetext" class="errorSpan"></span>
                         </div>
                         <div class="form-group">
                             <label for="tags">Tags</label>
-                            <input type="text" class="form-control" id="tags" name="tags" required>
+                            <textarea type="text" class="form-control" id="tags" name="tags" required></textarea>
                             <span th:id="errorModalUpdatetags" class="errorSpan"></span>
                         </div>
                         <div class="form-group">
                             <label for="imagePath">Image</label>
-                            <input type="text" class="form-control" id="imagePath" name="imagePath">
+                            <textarea type="text" class="form-control" id="imagePath" name="imagePath"></textarea>
                         </div>
                         <div class="form-group">
                             <label for="source">Source</label>
-                            <input type="text" class="form-control" id="source" name="source">
+                            <textarea type="text" class="form-control" id="source" name="source"></textarea>
                         </div>
                         <div class="form-group">
                             <label for="file">Image</label>
