--- a/core/src/main/resources/templates/core/management_achievement.html
+++ b/core/src/main/resources/templates/core/management_achievement.html
@@ -62,9 +62,7 @@
                                 </span>
                             </th>
                             <th>Id</th>
-                            <th>Title</th>
-                            <th>Description</th>
-                            <th>Message</th>
+                            <th>Translations</th>
                             <th>Achievement category</th>
                             <th>Condition</th>
                             <th>Actions</th>
@@ -83,9 +81,29 @@
                                         </span>
                                 </td>
                                 <td th:text="${allAchievements.getId()}"></td>
-                                <td th:text="${allAchievements.getTitle()}"></td>
-                                <td th:text="${allAchievements.getDescription()}"></td>
-                                <td th:text="${allAchievements.getMessage()}"></td>
+                                <td>
+                                    <table class="table table-borderless m-0">
+                                        <thead>
+                                        <tr class="table-secondary">
+                                            <th style="width: 8%">TranslationID </th>
+                                            <th style="width: 12%">Title</th>
+                                            <th style="width: 20%">Description</th>
+                                            <th style="width: 60%">Message</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <th:block
+                                                th:each="translation : ${pageable.getPage().get(iterStatus.index).getTranslations()}">
+                                            <tr>
+                                                <td th:text="${translation.getId()}"></td>
+                                                <td th:text="${translation.getTitle()}"></td>
+                                                <td th:text="${translation.getDescription()}"></td>
+                                                <td th:text="${translation.getMessage()}"></td>
+                                            </tr>
+                                        </th:block>
+                                        </tbody>
+                                    </table>
+                                </td>
                                 <td th:text="${allAchievements.getAchievementCategory().getName()}"></td>
                                 <td th:text="${allAchievements.getCondition()}"></td>
                                 <td>
@@ -151,21 +169,51 @@
                         </div>
                         <div class="modal-body">
                             <input type="hidden" class="form-control" name="id" value="-1" readonly required>
-                            <div class="form-group">
-                                <label>Title</label>
-                                <input type="text" class="form-control" name="title" required>
-                                <span th:id="errorModalSavetitle" class="errorSpan"></span>
-                            </div>
-                            <div class="form-group">
-                                <label>Description</label>
-                                <input type="text" class="form-control" name="description" required>
-                                <span th:id="errorModalSavedescription" class="errorSpan"></span>
-                            </div>
-                            <div class="form-group">
-                                <label>Message</label>
-                                <input type="text" class="form-control" name="message" required>
-                                <span th:id="errorModalSavemessage" class="errorSpan"></span>
-                            </div>
+                            <th:block th:each="language, iterInfo : ${languages}">
+                                <div class="row">
+                                    <div class="col">
+                                        <div class="form-group">
+                                            <label>Language ID</label>
+                                            <input class="form-control" readonly required
+                                                   th:name="${language.getId()}" th:value="${language.getId()}" type="text"/>
+                                        </div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="form-group">
+                                            <label>Language code</label>
+                                            <input class="form-control" readonly required
+                                                   th:name="${language.getCode()}" th:value="${language.getCode()}" type="text"/>
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="form-group">
+                                            <label>Title</label>
+                                            <textarea class="form-control" th:name="title+${'_' + language.getId()+'_'}+${language.getCode()}"
+                                                   type="text"></textarea>
+                                            <span class="errorSpan"
+                                                  th:id="'errorModalSavetranslations['+${iterInfo.index}+'].title'"></span>
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="form-group">
+                                            <label>Description</label>
+                                            <textarea class="form-control" th:name="description+${'_' + language.getId()+'_'}+${language.getCode()}"
+                                                      type="text"></textarea>
+                                            <span class="errorSpan"
+                                                  th:id="'errorModalSavetranslations['+${iterInfo.index}+'].description'"></span>
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="form-group">
+                                            <label>Message</label>
+                                            <textarea class="form-control" th:name="message+${'_' + language.getId()+'_'}+${language.getCode()}"
+                                                      type="text"></textarea>
+                                            <span class="errorSpan"
+                                                  th:id="'errorModalSavetranslations['+${iterInfo.index}+'].message'"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </th:block>
                             <div class="form-group">
                                 <label>Achievement category</label>
                                 <select class="form-control" name="achievementCategory">
@@ -209,33 +257,62 @@
                                 <input type="text" class="form-control" id="id" name="id" readonly required>
                                 <span th:id="errorModalUpdateid" class="errorSpan"></span>
                             </div>
-                            <div class="form-group">
-                                <label>Title</label>
-                                <input type="text" class="form-control" id="title" name="title" required>
-                                <span th:id="errorModalUpdatetitle" class="errorSpan"></span>
-                            </div>
-                            <div class="form-group">
-                                <label>Description</label>
-                                <input type="text" class="form-control" id="description" name="description" required>
-                                <span th:id="errorModalUpdatedescription" class="errorSpan"></span>
-                            </div>
-                            <div class="form-group">
-                                <label>Message</label>
-                                <input type="text" class="form-control" id="message" name="message" required>
-                                <span th:id="errorModalUpdatemessage" class="errorSpan"></span>
-                            </div>
+                            <th:block th:each="language, iterInfo : ${languages}">
+                                <div class="row">
+                                    <div class="col">
+                                        <div class="form-group">
+                                            <label>Language ID</label>
+                                            <input class="form-control" readonly required
+                                                   th:name="${language.getId()}" th:value="${language.getId()}" type="text"/>
+                                        </div>
+                                    </div>
+                                        <div class="col">
+                                            <div class="form-group">
+                                                <label>Language code</label>
+                                                <input class="form-control" readonly required
+                                                       th:name="${language.getCode()}" th:value="${language.getCode()}" type="text"/>
+                                            </div>
+                                        </div>
+                                        <div class="col-12">
+                                            <div class="form-group">
+                                                <label>Title</label>
+                                                <textarea class="form-control" th:id="title+${'_' + language.getId()+'_'}+${language.getCode()}"
+                                                       th:name="title+${'_' + language.getId()+'_'}+${language.getCode()}"
+                                                       type="text"></textarea>
+                                                <span class="errorSpan"
+                                                      th:id="'errorModalUpdatetranslations['+${iterInfo.index}+'].title'"></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-12">
+                                            <div class="form-group">
+                                                <label>Description</label>
+                                                <textarea class="form-control" th:id="description+${'_' + language.getId()+'_'}+${language.getCode()}"
+                                                       th:name="description+${'_' + language.getId()+'_'}+${language.getCode()}"
+                                                       type="text"></textarea>
+                                                <span class="errorSpan"
+                                                      th:id="'errorModalUpdatetranslations['+${iterInfo.index}+'].description'"></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-12">
+                                            <div class="form-group">
+                                                <label>Message</label>
+                                                <textarea class="form-control" th:id="message+${'_' + language.getId()+'_'}+${language.getCode()}"
+                                                       th:name="message+${'_' + language.getId()+'_'}+${language.getCode()}"
+                                                       type="text"></textarea>
+                                                <span class="errorSpan"
+                                                      th:id="'errorModalUpdatetranslations['+${iterInfo.index}+'].message'"></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                            </th:block>
                             <div class="form-group">
                                 <label>Achievement category</label>
-                                <select class="form-control" name="achievementCategory" id="achievementCategory" readonly required>
-                                    <option selected="selected" id="achievement-category"></option>
-                                    <th:block th:each="category : ${categoryList}">
-                                        <tr>
-                                            <option>
-                                                <td th:text="${category.getName()}"></td>
-                                            </option>
-                                        </tr>
-                                    </th:block>
-                                </select>
+                                <input type="text" class="form-control" id="achievementCategory" name="achievementCategory" readonly required>
+                                <th:block th:each="category : ${categoryList}">
+                                    <tr>
+                                        <td th:text="${category.getName()}"></td>
+                                    </tr>
+                                </th:block>
                                 <span th:id="errorModalUpdatecategory" class="errorSpan"></span>
                             </div>
                             <div class="form-group">
