added token to local storage

--- a/core/src/main/resources/templates/core/index.html
+++ b/core/src/main/resources/templates/core/index.html
@@ -28,4 +28,10 @@
 </div>
     <div id="footer" th:insert="core/footer"></div>
 </body>
+<input id="token" type="hidden" th:value="${accessToken}"/>
+<script>
+    const accessToken = document.getElementById('token').value;
+    localStorage.setItem('accessToken', accessToken);
+    console.log(accessToken);
+</script>
 </html>
