all tags (frontend, backend)

--- a/core/src/main/resources/templates/core/footer.html
+++ b/core/src/main/resources/templates/core/footer.html
@@ -42,6 +42,9 @@
                             <a class="router-links" href="/management/places/">Places</a>
                         </li>
                         <li>
+                            <a class="router-links" href="/management/tags/">Tags</a>
+                        </li>
+                        <li>
                             <a class="router-links" href="/management/socialnetworkimages">Social network images</a>
                         </li>
                         <li>
