--- a/core/src/main/resources/templates/core/header.html
+++ b/core/src/main/resources/templates/core/header.html
@@ -63,6 +63,11 @@
                                 </a>
                             </li>
                             <li>
+                                <a href="/management/tags/">
+                                    Tags
+                                </a>
+                            </li>
+                            <li>
                                 <a href="/management/socialnetworkimages/">
                                     Social network images
                                 </a>
