save new tag (frontend, backend)

--- a/core/src/main/resources/templates/core/management_tags.html
+++ b/core/src/main/resources/templates/core/management_tags.html
@@ -166,7 +166,7 @@
                         <input type="hidden" class="form-control" name="id" value="-1" readonly required>
                         <div class="form-group">
                             <label>Type</label>
-                            <select name="type" class="form-control">
+                            <select name="tagType" class="form-control">
                                 <option>ECO_NEWS</option>
                                 <option>TIPS_AND_TRICKS</option>
                                 <option>HABIT</option>
