--- a/core/src/main/resources/templates/core/management_tags.html
+++ b/core/src/main/resources/templates/core/management_tags.html
@@ -21,7 +21,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" th:href="@{/management/css/table_Modal_Pagination.css}">
-    <!--<script th:src="@{/management/tags/buttonsAJAX.js}"></script>-->
+    <script th:src="@{/management/tag/buttonsAJAX.js}"></script>
 </head>
 <body>
 <div id="header" th:insert="core/header"></div>
@@ -210,75 +210,6 @@
             </div>
         </div>
     </div>
-    <!-- Edit Modal HTML -->
-    <!-- <div class="modal fade" id="editTagModal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <form id="editTagForm">
-                    <div class="modal-header">
-                        <h4 class="modal-title">Edit Tag</h4>
-                        <button aria-hidden="true" class="close" data-dismiss="modal" type="button">&times;</button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="form-group">
-                            <label>ID</label>
-                            <label for="id"></label><input class="form-control" id="id" name="id" readonly required type="text">
-                        </div>
-                        <div class="form-group">
-                            <label>Type</label>
-                            <label>
-                                <select name="tagType" class="form-control">
-                                    <option>ECO_NEWS</option>
-                                    <option>TIPS_AND_TRICKS</option>
-                                    <option>HABIT</option>
-                                </select>
-                            </label>
-                            <span class="errorSpan" th:id="errorModalUpdatetype"></span>
-                        </div>
-                        <th:block th:each="language, iterInfo : ${languages}">
-                            <div class="row">
-                                <div class="col">
-                                    <div class="form-group">
-                                        <label>Language ID</label>
-                                        <label>
-                                            <input class="form-control" readonly required
-                                                   th:name="${language.getId()}" th:value="${language.getId()}" type="text"/>
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="col">
-                                    <div class="form-group">
-                                        <label>Code</label>
-                                        <label>
-                                            <input class="form-control" readonly required
-                                                   th:name="${language.getCode()}" th:value="${language.getCode()}" type="text"/>
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="col-9">
-                                    <div class="form-group">
-                                        <label>Name</label>
-                                        <label>
-                                            <input class="form-control" th:width="${100}"
-                                                   th:id="name+${'_' + language.getId()+'_'}+${language.getCode()}"
-                                                   th:name="name+${'_' + language.getId()+'_'}+${language.getCode()}"
-                                                   type="text"/>
-                                        </label>
-                                        <span class="errorSpan"
-                                              th:id="'errorModalUpdatetagTranslations['+${iterInfo.index}+'].name'"></span>
-                                    </div>
-                                </div>
-                            </div>
-                        </th:block>
-                    </div>
-                    <div class="modal-footer">
-                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
-                        <input type="submit" class="btn btn-success btn-primary" value="Save" id="submitEditBtn">
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div> -->
     <div id="editTagModal" class="modal fade">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -380,221 +311,6 @@
     </div>
 </div>
 <div id="footer" th:insert="core/footer"></div>
-<script>
-    function clearAllErrorsSpan() {
-        $('.errorSpan').text('');
-    }
-
-    let checkedCh = 0;
-    function updateCheckBoxCount(chInt) {
-        let chBox = $('#checkbox' + chInt);
-        let deleteBtn = $("#btnDelete");
-        chBox.is(":checked") ? checkedCh++ : checkedCh--;
-        if (checkedCh === 0) {
-            deleteBtn.addClass("disabled");
-        } else deleteBtn.removeClass("disabled");
-    }
-
-    $(document).ready(function () {
-        let deleteBtn = $("#btnDelete");
-        console.log('js...');
-
-        $('[data-toggle="tooltip"]').tooltip();
-
-        var checkbox = $('table tbody input[type="checkbox"]');
-        $("#selectAll").click(function() {
-            if (this.checked) {
-                checkedCh = 0;
-                checkbox.each(function () {
-                    this.checked = true;
-                    checkedCh++;
-                });
-                deleteBtn.removeClass("disabled");
-            } else {
-                checkbox.each(function () {
-                    checkedCh--;
-                    this.checked = false;
-                });
-                deleteBtn.addClass("disabled");
-            }
-        });
-        checkbox.click(function(){
-            if(!this.checked){
-                $("#selectAll").prop("checked", false);
-            }
-        });
-
-        $('#btnSearchImage').click(function (){
-            let url = "/management/tags?filter=";
-            let query = $('#inputSearch').val();
-            $.ajax({
-                url: url + query,
-                type: 'GET',
-                success: function(res) {
-                    window.location.href= url + query;
-                }
-            });
-        });
-
-        function sendAjaxDeleteRequest(href, payload) {
-            payload = payload !== undefined ? payload : {};
-            $.ajax({
-                url: href,
-                type: 'delete',
-                dataType: 'json',
-                contentType: 'application/json',
-                success: function () {
-                    location.reload();
-                },
-                data: JSON.stringify(payload)
-            });
-        }
-
-        function sendAjaxPostRequest(payload) {
-            $.ajax({
-                url: '/management/tags/',
-                type: 'post',
-                dataType: 'json',
-                contentType: 'application/json',
-                success: function (data) {
-                    if (Array.isArray(data.errors) && data.errors.length) {
-                        data.errors.forEach(function (el) {
-                            console.log(el.fieldName);
-                            $(document.getElementById('errorModalSave' + el.fieldName)).text(el.fieldError);
-                        })
-                    } else {
-                        location.reload();
-                    }
-                },
-                data: JSON.stringify(payload)
-            });
-        }
-
-        function sendAjaxPutRequest(payload, tagId) {
-            $.ajax({
-                url: `/management/tags/${tagId}`,
-                type: 'put',
-                dataType: 'json',
-                contentType: 'application/json',
-                success: function (data) {
-                    if (Array.isArray(data.errors) && data.errors.length) {
-                        data.errors.forEach(function (el) {
-                            $(document.getElementById('errorModalUpdate' + el.fieldName)).text(el.fieldError);
-                        })
-                    } else {
-                        location.reload();
-                    }
-                },
-                data: JSON.stringify(payload)
-            });
-        }
-
-        function getCheckedValues(checkbox) {
-            var payload = [];
-            checkbox.each(function () {
-                if (this.checked) {
-                    payload.push(parseInt(this.value));
-                }
-            });
-
-            return payload;
-        }
-
-        function getDataFromForm(formId) {
-            return $(formId).serializeArray().reduce(function (obj, item) {
-                obj[item.name] = item.value;
-                return obj;
-            }, {});
-        }
-
-        function getTranslationsFromFormData(formData) {
-            var translations = [];
-            for (var key in formData) {
-                if (key.startsWith("name")) {
-                    var nameAndLanguage = key.split("_");
-                    var langId = nameAndLanguage[1];
-                    var langCode = nameAndLanguage[2];
-                    var name = formData["name_" + langId + "_" + langCode];
-                    translations.push({
-                        "name": name,
-                        "language": {
-                            "code": langCode,
-                            "id": langId
-                        }
-                    });
-                }
-            }
-
-            return translations;
-        }
-
-        function composePayloadFromFormData(formData) {
-            return {
-                "type": formData.tagType,
-                "tagTranslations": getTranslationsFromFormData(formData)
-            };
-        }
-
-        $('td .edit.eBtn').on('click', function (event) {
-            event.preventDefault();
-            $("#editTagModal").each(function () {
-                $(this).find('input.eEdit').val("");
-            });
-            clearAllErrorsSpan();
-            $('#editTagModal').modal();
-            var href = $(this).attr('href');
-            $.get(href, function (tag, status) {
-                $('#id').val(tag.id);
-                $('#tagType').val(tag.type);
-                tag.tagTranslations.forEach(function (translation, index) {
-                    $(`#name_${translation.languageVO.id}_${translation.languageVO.code}`)
-                        .val(translation.name);
-                })
-            });
-        });
-
-        $('#addTagModalBtn').on('click', function (event) {
-            clearAllErrorsSpan();
-        });
-
-        $('td .delete.eDelBtn').on('click', function (event) {
-            event.preventDefault();
-            $('#deleteTagModal').modal();
-            var href = $(this).attr('href');
-            $('#deleteOneSubmit').attr('href', href);
-        });
-
-        $('#deleteOneSubmit').on('click', function (event) {
-            event.preventDefault();
-            var href = $(this).attr('href');
-            sendAjaxDeleteRequest(href);
-        });
-
-        $('#deleteAllSubmit').on('click', function (event) {
-            event.preventDefault();
-            var href = '/management/tags/';
-            var payload = getCheckedValues(checkbox);
-            sendAjaxDeleteRequest(href, payload);
-        });
-
-        $('#submitAddBtn').on('click', function (event) {
-            event.preventDefault();
-            clearAllErrorsSpan();
-            var formData = getDataFromForm('#addTagForm');
-            var payload = composePayloadFromFormData(formData);
-            sendAjaxPostRequest(payload);
-        });
-
-        $('#submitEditBtn').on('click', function (event) {
-            event.preventDefault();
-            clearAllErrorsSpan();
-            var formData = getDataFromForm('#editTagForm');
-            var tagId = formData.id;
-            var payload = composePayloadFromFormData(formData);
-            sendAjaxPutRequest(payload, tagId);
-        })
-    });
-</script>
 </body>
 </html>
 
